--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "netlify-cli": "^12.7.2",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^2.7.0"
   }
 }
